[gd_scene format=3 uid="uid://dhbdtsg33uccl"]

[ext_resource type="PackedScene" uid="uid://c82rpr3lbn83q" path="res://Enemy/enemy.tscn" id="1_ptr8x"]
[ext_resource type="Script" uid="uid://di70ncwuws6x3" path="res://FireMageEnemy/fire_mage.gd" id="2_1bkr6"]
[ext_resource type="Texture2D" uid="uid://cb2ddjpc766dj" path="res://FireMageEnemy/Hurt_Fire Character-Sheet.png" id="2_4j828"]
[ext_resource type="Texture2D" uid="uid://cqrdx2mbs4vsw" path="res://FireMageEnemy/Walking_Fire Character-Sheet.png" id="2_l7hyx"]
[ext_resource type="PackedScene" uid="uid://biot7x6u11iaq" path="res://FireMageEnemy/mage_fire_ball.tscn" id="3_1bkr6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ld2ni"]
atlas = ExtResource("2_4j828")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_07io4"]
atlas = ExtResource("2_4j828")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pbw2"]
atlas = ExtResource("2_4j828")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_txmf7"]
atlas = ExtResource("2_4j828")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j828"]
atlas = ExtResource("2_l7hyx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bkr6"]
atlas = ExtResource("2_l7hyx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4d6e"]
atlas = ExtResource("2_l7hyx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hkbu"]
atlas = ExtResource("2_l7hyx")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a5bm"]
atlas = ExtResource("2_l7hyx")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ld2ni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld2ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07io4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pbw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txmf7")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j828")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bkr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4d6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hkbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a5bm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1bkr6"]
radius = 14.0
height = 46.0

[node name="FireMage" unique_id=1361306782 instance=ExtResource("1_ptr8x")]
script = ExtResource("2_1bkr6")
SPEED = 25.0
MageFireBall = ExtResource("3_1bkr6")
character_name = "FireMage"

[node name="EnemyAnimation" parent="." index="0" unique_id=786765966]
sprite_frames = SubResource("SpriteFrames_ld2ni")
frame_progress = 0.36763424

[node name="AttackCollision" parent="AttackRange" parent_id_path=PackedInt32Array(1082727073) index="0" unique_id=893530688]
position = Vector2(0, -9)

[node name="AttackCollision" parent="HitBoxes" parent_id_path=PackedInt32Array(415184857) index="0" unique_id=216106609]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_1bkr6")

[node name="FireBallCooldown" type="Timer" parent="." index="5" unique_id=1353844751]
wait_time = 6.0
autostart = true

[node name="FireballLocation" type="Marker2D" parent="." index="6" unique_id=2124793430]
position = Vector2(-8, -2)

[connection signal="timeout" from="FireBallCooldown" to="." method="_on_fire_ball_cooldown_timeout"]
